k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    service: auth
spec:
  selector:
    app: auth
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
    service: account
spec:
  selector:
    app: account
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: transaction
  labels:
    app: transaction
    service: transaction
spec:
  selector:
    app: transaction
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: usage
  labels:
    app: usage
    service: usage
spec:
  selector:
    app: usage
  ports:
  - name: http
    port: 80
    targetPort: 3000
